--- a/index.html
+++ b/index.html
@@ -276,8 +276,64 @@
             </div>
             
             <!-- Activity settings-->
-            <div class="activity settings" id="activity_settings"></div>
-
+            <div class="activity settings" id="activity_settings">
+                <h1>SETTINGS</h1>
+                <div class="container_settings" id="container_settings">
+                    <div class="data_settings">
+                        <div class="data user">
+                            <h3>Data user</h3>
+                            <div class="image_user">
+                                <img src="assets/img/userPhoto.png" alt="">
+                                <div class="change_img">
+                                    <span id="root_img">ruta img...</span>
+                                    <input type="button" value="Change">
+                                </div>
+                            </div>
+                            <div class="input_data">
+                                <label for="">Name</label>
+                                <input type="text" name="" id="">
+                            </div>
+                            <div class="input_data">
+                                <label for="">Curse</label>
+                                <input type="text" name="" id="">
+                            </div>
+                            <div class="input_data">
+                                <label for="">Age</label>
+                                <input type="date" name="" id="">
+                            </div>
+                        </div>
+                        <div class="data location">
+                            <h3>Data location</h3>
+                            <div class="input_data">
+                                <label for="">Country</label>
+                                <input type="text" name="" id="">
+                            </div>
+                            <div class="input_data">
+                                <label for="">City</label>
+                                <input type="text" name="" id="">
+                            </div>
+                            <div class="input_data">
+                                <label for="">DNI</label>
+                                <input type="text" name="" id="">
+                            </div>
+                            <div class="input_data">
+                                <label for="" class="label_description">Description</label>
+                                <textarea name="" id="" cols="30" rows="10"></textarea>
+                            </div>
+                        </div>
+                        <div class="other_options">
+                            <div class="light_mode">
+                                <label for="">Light mode</label>
+                                <input type="button" value="active">                                
+                            </div>
+                            <div class="button_save">
+                                <input id="save_button" type="button" value="Save">                    
+                            </div>  
+                        </div>
+                    </div>
+                                      
+                </div>
+            </div>
         </div>
     </main>
 
