starting get file with js

--- a/index.html
+++ b/index.html
@@ -340,9 +340,17 @@
                             </div>
                         </div>
                         <div class="other_options">
-                            <div class="light_mode">
+                            <div class="option light_mode">
                                 <label for="">Light mode</label>
-                                <input id="button_light" type="button" value="active">                                
+                                <div class="button">
+                                    <input id="button_light" type="button" value="active">
+                                </div>                                
+                            </div>
+                            <div class="option hide_title">
+                                <label for="">Hide sections title</label>
+                                <div class="button">
+                                    <input id="button_hide_title" type="button" value="active">
+                                </div>                                
                             </div>
                             <div class="button_save">
                                 <input id="save_button" type="button" value="Save">                    
